Fix page backdrops not covering the full screen

--- a/src/styles/components/Layout/PageBackdrop.module.scss
+++ b/src/styles/components/Layout/PageBackdrop.module.scss
@@ -20,10 +20,10 @@
     & > img {
         pointer-events: none;
         position: absolute;
+        width: 100%;
+        height: 100%;
         top: 0;
         left: 0;
-        right: 0;
-        bottom: 0;
         object-fit: cover;
         z-index: 1;
     }
